# AzureIoTHubTest

./: .gitignore  LICENSE  README.md
AzureIoTDeviceSDKTest/Lchika_client/: CMakeLists.txt  Lchika_client.c  Lchika_client.h
AzureIoTDeviceSDKTest/Lchika_client/linux/: CMakeLists.txt
AzureIoTServiceSDKTest/: AzureIoTServiceSDKTest.sln
AzureIoTServiceSDKTest/AzureIoTServiceSDKTest/AzureIoTServiceSDKTest/: App.xaml  App.xaml.cs  AzureIoTServiceSDKTest.csproj  MainPage.xaml  MainPage.xaml.cs
AzureIoTServiceSDKTest/AzureIoTServiceSDKTest/AzureIoTServiceSDKTest.Android/: AzureIoTServiceSDKTest.Android.csproj  MainActivity.cs
AzureIoTServiceSDKTest/AzureIoTServiceSDKTest/AzureIoTServiceSDKTest.Android/Properties/: AndroidManifest.xml  AssemblyInfo.cs
AzureIoTServiceSDKTest/AzureIoTServiceSDKTest/AzureIoTServiceSDKTest.Android/Resources/: Resource.designer.cs
AzureIoTServiceSDKTest/AzureIoTServiceSDKTest/AzureIoTServiceSDKTest.Android/Resources/values/: Strings.xml
AzureIoTServiceSDKTest/AzureIoTServiceSDKTest/AzureIoTServiceSDKTest.UWP/: App.xaml  App.xaml.cs  AzureIoTServiceSDKTest.UWP.csproj  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
AzureIoTServiceSDKTest/AzureIoTServiceSDKTest/AzureIoTServiceSDKTest.UWP/Properties/: AssemblyInfo.cs
AzureIoTServiceSDKTest/AzureIoTServiceSDKTest/AzureIoTServiceSDKTest.iOS/: AppDelegate.cs  AzureIoTServiceSDKTest.iOS.csproj  Info.plist  Main.cs
AzureIoTServiceSDKTest/AzureIoTServiceSDKTest/AzureIoTServiceSDKTest.iOS/Properties/: AssemblyInfo.cs
